mak emore modular

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "geektrust.js",
   "scripts": {
     "start": "node geektrust.js",
-    "test": "mocha"
+    "test": "mocha",
+    "coverage": "nyc npm run test"
   },
   "author": "Jayeesha Ghosh",
   "license": "ISC",
@@ -14,5 +15,8 @@
     "fs": "0.0.1-security",
     "lodash": "^4.17.20",
     "mocha": "7.2.0"
+  },
+  "devDependencies": {
+    "nyc": "^15.1.0"
   }
 }
