--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "chai": "^4.2.0",
     "fs": "0.0.1-security",
     "lodash": "^4.17.20",
-    "mocha": "7.2.0"
+    "mocha": "7.2.0",
+    "sinon": "^9.0.3"
   },
   "devDependencies": {
     "nyc": "^15.1.0"
